--- a/.github/workflows/zadanie_4.yml
+++ b/.github/workflows/zadanie_4.yml
@@ -21,4 +21,7 @@ jobs:
         python-version: "3.10"
     - name: Run tests
       run: python test_3.py
+    - name: Run tests
+      run: python test_4.py
+
 
