--- a/.github/workflows/zadanie_4.yml
+++ b/.github/workflows/zadanie_4.yml
@@ -23,5 +23,8 @@ jobs:
       run: python test_3.py
     - name: Run tests
       run: python test_4.py
+    - name: Run tests
+      run: python test5.py
+
 
 
